Bump felles og bom. Rydder i maven og sonar (#920)